@@ -1148,6 +1148,7 @@ sub get_apache_model {
                 # In apache2, worker / prefork / event are no longer compiled-in.
                 # Instead, with is a loaded in module
                 # differing from httpd / httpd24u's process directly, in ubuntu we need to run apache2ctl.
+                if ($VERBOSE) { print "VERBOSE: Looking for model, first trying 'apachectl'." }
                 $model = `apache2ctl -M 2>&1 | egrep "worker|prefork|event|itk"`;
                 # if we detect itk module, we need to stop immediately:
                 if ($VERBOSE) { print "VERBOSE: $model" }
@@ -1164,7 +1165,15 @@ sub get_apache_model {
                 if ($VERBOSE) { print "VERBOSE: Return Value: $model\n" }
                 return $model;
         } else {
+                if ($VERBOSE) { print "VERBOSE: model not found, falling back to 'apachectl'." }
                 $model = `apachectl -M 2>&1 | egrep "worker|prefork|event|itk"`;
+		# Gotcha in Fedora 32  - so likely to appear in later versions of apache (circa 2.4.43)
+		# see issue #334, apachectl was our fall back but now we need to also fall back to httpd.
+		my @array_models = ('worker','prefork','event','itk'); 
+		if not (grep $model, @array_models) { 
+                	if ($VERBOSE) { print "VERBOSE: model not found, falling back to 'httpd', last try..." }
+                	$model = `httpd -M 2>&1 | egrep "worker|prefork|event|itk"`;
+		}
                 if ($VERBOSE) { print "VERBOSE: $model" }
                 if ($VERBOSE) { print "VERBOSE: ITK DETECTOR STARTED\n" }
                 itk_detect($model);
