@@ -2,6 +2,10 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2020-06-19	Richard Forth	Added a fix up working towards apache 2.4.43
+				- issue with apachectl, first spotted in
+				Fedora 32
+				- added fallback to httpd.
 2020-06-19	Richard Forth	Added a fix up working towards ubuntu 20.04
 				support.
 				- requires further testing
